--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
+    "@mui/styles": "^5.15.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
