--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@mui/styles": "^5.15.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "react-toastify": "^10.0.1"
+    "react-toastify": "^10.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
