--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
     "@mui/styles": "^5.15.4",
+    "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
@@ -39,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
