--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "prisma": "^5.8.1"
+
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
@@ -41,7 +43,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
