--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "helpers/contact-repo.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "helpers/contact-repo.js", "configs/prisma.config.js", "configs/prisma.config.js"],
   "exclude": ["node_modules"]
 }
